# django-niceid

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: SECURITY.md
.github/workflows/: ci.yml  release.yml
src/niceid/: __init__.py  apps.py  converter.py  drf.py  fields.py  models.py  ninja.py  rest.py  validators.py
testproj/: settings.py  urls.py
testproj/testapp/: apps.py  models.py  views.py
testproj/testapp/migrations/: 0001_initial.py
tests/: test_converter.py  test_drf.py  test_fields.py  test_forms.py  test_niceid.py  test_postgres.py  test_pydantic.py
